# azure-functions-python-extensions

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  codecov.yml  setup.py
.ci/: build.sh
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codecov/: .codecov_base.yml  .codecov_blob.yml  .codecov_fastapi.yml
.github/hooks/: .pre-commit-config.yaml
.github/linters/: tox.ini
.github/workflows/: ci_ut_ext_base_workflow.yml  ci_ut_ext_blob_workflow.yml  ci_ut_ext_fastapi_workflow.yml  gh-tests-ci.yml  linter.yml  linting_extension_base.yml  linting_extension_blob.yml  linting_extension_fastapi.yml  pr_review_reminder.yml
azure-functions-extension-base/: README.md  pyproject.toml  setup.py
azure-functions-extension-base/azure/functions/extension/base/: __init__.py  __version__.py  meta.py  sdkType.py  utils.py  version.py  web.py
azure-functions-extension-base/azurefunctions/extension/base/: __init__.py  utils.py
azure-functions-extension-base/tests/: __init__.py  test_meta.py  test_sdk_type.py  test_utils.py  test_web.py
azure-functions-extension-blob/: README.md  pyproject.toml  setup.py
azure-functions-extension-blob/azure/functions/extension/blob/: __init__.py  __version__.py  blobClient.py  blobClientConverter.py  containerClient.py  storageStreamDownloader.py
azure-functions-extension-blob/samples/: README.md
azure-functions-extension-blob/samples/blob_samples_blobclient/: function_app.py  requirements.txt
azure-functions-extension-blob/samples/blob_samples_containerclient/: function_app.py
azure-functions-extension-blob/samples/blob_samples_storagestreamdownloader/: function_app.py
azure-functions-extension-blob/tests/: __init__.py  test_blobclient.py  test_containerclient.py  test_ssd.py
azure-functions-extension-fastapi/: MANIFEST.in  README.md  pyproject.toml  setup.py
azure-functions-extension-fastapi/azure/functions/extension/fastapi/: __init__.py  web.py
azure-functions-extension-fastapi/samples/fastapi_samples_streaming_download/: function_app.py  local.settings.json  requirements.txt
azure-functions-extension-fastapi/samples/fastapi_samples_streaming_upload/: function_app.py
azure-functions-extension-fastapi/tests/: test_web.py
azurefunctions-extension-base/: pyproject.toml
azurefunctions-extension-base/azurefunctions/extension/base/: meta.py
azurefunctions-extensions-base/: README.md  pyproject.toml
azurefunctions-extensions-base/azurefunctions/extensions/base/: __init__.py
azurefunctions-extensions-base/tests/: test_meta.py  test_sdk_type.py  test_utils.py  test_web.py
azurefunctions-extensions-bindings-blob/: README.md  pyproject.toml
azurefunctions-extensions-bindings-blob/azurefunctions/extensions/bindings/blob/: __init__.py  aioBlobClient.py  blobClient.py  blobClientConverter.py  containerClient.py  storageStreamDownloader.py  utils.py
azurefunctions-extensions-bindings-blob/azurefunctions/extensions/bindings/blob/aio/: __init__.py  blobClient.py  containerClient.py  storageStreamDownloader.py
azurefunctions-extensions-bindings-blob/samples/: README.md
azurefunctions-extensions-bindings-blob/samples/blob_samples_blobclient/: function_app.py  requirements.txt
azurefunctions-extensions-bindings-blob/samples/blob_samples_containerclient/: function_app.py
azurefunctions-extensions-bindings-blob/samples/blob_samples_identity/: function_app.py  local.settings.json
azurefunctions-extensions-bindings-blob/samples/blob_samples_storagestreamdownloader/: function_app.py
azurefunctions-extensions-bindings-blob/tests/: test_aio_blobclient.py  test_aio_containerclient.py  test_aio_ssd.py  test_blobclient.py  test_containerclient.py  test_ssd.py
azurefunctions-extensions-http-fastapi/: README.md  pyproject.toml
azurefunctions-extensions-http-fastapi/azurefunctions/extensions/http/fastapi/: __init__.py  web.py
azurefunctions-extensions-http-fastapi/samples/fastapi_samples_streaming_download/: function_app.py  local.settings.json
azurefunctions-extensions-http-fastapi/samples/fastapi_samples_streaming_upload/: function_app.py
azurefunctions-extensions-http-fastapi/tests/: test_web.py
azurefunctionsbasebindings/azurefunctionsbasebindings/: meta.py  sdkType.py  utils.py
azurefunctionsbasebindings/tests/: test_meta.py  test_utils.py
azurefunctionsblobbindings/azurefunctionsblobbindings/: blobClient.py  blobClientConverter.py  containerClient.py  storageStreamDownloader.py
azurefunctionsblobbindings/tests/: test_blobclient.py  test_code_quality.py  test_containerclient.py  test_ssd.py
eng/ci/: base-integration-tests.yml  blob-integration-tests.yml  ci-base-tests.yml  ci-blob-tests.yml  code-mirror.yml  fastapi-integration-tests.yml  official-build.yml  public-build.yml
eng/templates/: build.yml  ci-tests.yml
eng/templates/jobs/: build.yml
eng/templates/official/jobs/: base-unit-tests.yml  blob-unit-tests.yml  build-artifacts.yml  fastapi-unit-tests.yml
