[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-functions-extension-fastapi"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{ name = "Azure Functions team at Microsoft Corp.", email = "azurefunctions@microsoft.com"}]
description = "FastApi Python worker extension for Azure Functions."
readme = "README.md"
license = {text = "MIT License"}
classifiers= [
        'License :: OSI Approved :: MIT License',
        'Intended Audience :: Developers',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Operating System :: MacOS :: MacOS X',
        'Environment :: Web Environment',
        'Development Status :: 5 - Production/Stable',
    ]
dependencies = [
        'azure-functions-extension-base',
        'fastapi==0.110.0',
        'uvicorn==0.28.0',
        'pydantic==2.6.4',
    ]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'coverage',
    'pytest-instafail',
    'pre-commit'
    ]

[tool.setuptools.dynamic]
version = {attr = "azure.functions.extension.fastapi.__version__"}

[tool.setuptools.packages.find]
exclude = [
    'azure.functions.extension', 'azure.functions',
    'azure', 'tests', 'samples'
    ]

